# deephiveV2

./: .gitignore  deephive.py  deephive2.py  experiment.ipynb  exploration_experiment.ipynb  opt_env_test.py  pso.ipynb  pyproject.toml  requirements.txt  run.sh  run_experiments.sh  run_script.sh  test.py  utility.py
Benchmark_results/: result_comparison_function.xlsx
PDFs/: config.json  run_experiments copy 2.sh  run_experiments copy 3.sh  run_experiments copy.sh  split_config.json
config/:   config.json  config.json  exp_2_config.json  exp_config.json  split_config.json  train_config.json
environment/: deephive_utils.py  optimization_environment.py  utils.py
experiments/: benchmark.py  compare.py  run_experiment.py  run_experiment2.py  run_experiment3.py
exploration/: gaussian_mixture.py  gp_surrogate.py
models/: exploiting_model.pth  gbest.pth  gbest_exploiters.pth  model_101_policy-4800.pth  model_102_policy-4800.pth  model_103_policy-4800.pth  model_104_policy-4800.pth  pbest_freeze.pth  pbest_unfreeze.pth
notebooks/: brainstorm.ipynb  comparison.ipynb  experiment copy.ipynb  experiment.ipynb  experiment_01.ipynb  experiment_02.ipynb  experiment_03.ipynb  exploration_experiment copy.ipynb  exploration_experiment.ipynb  function_test.ipynb  login.ipynb  new_training.ipynb  notebook.ipynb  opt_transformer.ipynb  optimization_experiment.ipynb  other_algorithms.ipynb  plot_utils.py  pso.ipynb  psobsa  psobsa.ipynb  results.xlsx  ~$results.xlsx
optimizers/: deephive1.py  deephive2.py
other_algorithms/: pso.py
policies/: ddpg.py  mappo.py
(+50 files in other folders)
